JENKINS-65028 using Java 8 compabible api